--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
                     <button class="trend-li"><img src="icons/profileIcons/iguanaprofile.svg" alt="iguana blue profile icon" class="trend-img" /> <div class="trend-at">@iguanaeat</div> <div class="trend-name">No Traffic Maker</div></button>              
                 </div>
             </div>
+            <div class="hearguardlogo">
+                <img src="icons/hearguard-logo-design.png" alt="hearguard custom logo" />
+            </div>
         </div>
     </div>
 </body>
