Add custom logo - test

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </div>
             </div>
             <div class="hearguardlogo">
-                <img src="icons/hearguard-logo-design.png" alt="hearguard custom logo" />
+                <img src="icons/HearGuard.jpg" alt="hearguard custom logo" />
             </div>
         </div>
     </div>
